# wkMultiInstance

./: CMakeLists.txt  README.md  resource.rc.in
src/: dllmain.cpp  handle.c
